[gd_scene load_steps=28 format=3 uid="uid://djv1104dc3q6v"]

[ext_resource type="Script" path="res://enemies/ground_vehicles/hammer/hammer.gd" id="1_aumqh"]
[ext_resource type="Resource" uid="uid://b4exhkl70uay1" path="res://enemies/ground_vehicles/hammer/hammer_stats.tres" id="2_2anm2"]
[ext_resource type="Script" path="res://#shared_assets/components/hitbox.gd" id="3_pmc74"]
[ext_resource type="Script" path="res://#debug/spawn_despawn_point_preview.gd" id="4_fdr6n"]
[ext_resource type="Texture2D" uid="uid://ds0m5w136hjps" path="res://enemies/kenney_top_down_tanks_explosions.png" id="5_dj36a"]
[ext_resource type="Texture2D" uid="uid://til4c6ooqoat" path="res://enemies/ground_vehicles/kenney_top_down_tanks_tanks-sheet.png" id="6_p6jof"]
[ext_resource type="Script" path="res://#shared_assets/state_machine/state_machine.gd" id="9_7lp6w"]
[ext_resource type="Script" path="res://enemies/#states/enemy_follow_path.gd" id="10_tqaj7"]
[ext_resource type="Script" path="res://enemies/#states/enemy_die.gd" id="11_xhhw7"]
[ext_resource type="Script" path="res://#shared_assets/components/coin_value_component.gd" id="12_0e3dr"]
[ext_resource type="Script" path="res://#shared_assets/components/damage_component.gd" id="12_4srmy"]
[ext_resource type="Script" path="res://#shared_assets/components/health_component.gd" id="13_fd501"]
[ext_resource type="Script" path="res://#shared_assets/components/layers_component.gd" id="14_i4848"]
[ext_resource type="Script" path="res://#shared_assets/components/hit_flash_component.gd" id="14_k6fna"]
[ext_resource type="Script" path="res://#shared_assets/components/path_movement_component.gd" id="15_kfj01"]
[ext_resource type="Script" path="res://#shared_assets/components/properties_component.gd" id="16_gwak5"]
[ext_resource type="Script" path="res://#shared_assets/components/speed_component.gd" id="16_o2ywc"]
[ext_resource type="Script" path="res://#shared_assets/components/sound_component.gd" id="19_jspvw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pawm0"]
size = Vector2(54, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5fi5"]
atlas = ExtResource("5_dj36a")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwp4j"]
atlas = ExtResource("5_dj36a")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_syxr0"]
atlas = ExtResource("5_dj36a")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v4px"]
atlas = ExtResource("5_dj36a")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4o72"]
atlas = ExtResource("5_dj36a")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e86ir"]
atlas = ExtResource("6_p6jof")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7fp7q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5fi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwp4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syxr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v4px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4o72")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"die",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e86ir")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8m3o2"]
radius = 0.01

[node name="HammerPath" type="PathFollow2D"]
loop = false

[node name="Hammer" type="Area2D" parent="." groups=["enemies", "ground_vehicles", "vehicles"]]
scale = Vector2(1.5, 1.5)
collision_layer = 64
collision_mask = 132
script = ExtResource("1_aumqh")
stats = ExtResource("2_2anm2")

[node name="Hitbox" type="CollisionShape2D" parent="Hammer"]
shape = SubResource("RectangleShape2D_pawm0")
script = ExtResource("3_pmc74")

[node name="SpawnDespawnPointPreview" type="Node" parent="Hammer/Hitbox" node_paths=PackedStringArray("spawn_point", "despawn_point")]
script = ExtResource("4_fdr6n")
spawn_point = NodePath("../../SpawnPoint")
despawn_point = NodePath("../../DespawnPoint")

[node name="Animations" type="AnimatedSprite2D" parent="Hammer"]
unique_name_in_owner = true
scale = Vector2(1.125, 1.125)
sprite_frames = SubResource("SpriteFrames_7fp7q")
animation = &"idle"
autoplay = "idle"

[node name="SpawnPoint" type="Marker2D" parent="Hammer"]
position = Vector2(27, 0)

[node name="DespawnPoint" type="Area2D" parent="Hammer" groups=["enemies"]]
position = Vector2(-27, 0)
collision_layer = 16
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hammer/DespawnPoint"]
shape = SubResource("CircleShape2D_8m3o2")

[node name="StateMachine" type="Node" parent="Hammer" node_paths=PackedStringArray("initial_state")]
script = ExtResource("9_7lp6w")
initial_state = NodePath("EnemyFollowPath")

[node name="EnemyFollowPath" type="Node" parent="Hammer/StateMachine"]
script = ExtResource("10_tqaj7")

[node name="EnemyDie" type="Node" parent="Hammer/StateMachine"]
script = ExtResource("11_xhhw7")

[node name="CoinValueComponent" type="Node" parent="Hammer"]
script = ExtResource("12_0e3dr")

[node name="DamageComponent" type="Node" parent="Hammer"]
script = ExtResource("12_4srmy")

[node name="HealthComponent" type="Node" parent="Hammer" node_paths=PackedStringArray("hitbox")]
script = ExtResource("13_fd501")
hitbox = NodePath("../Hitbox")

[node name="HitFlashComponent" type="Node" parent="Hammer" node_paths=PackedStringArray("animations")]
script = ExtResource("14_k6fna")
animations = NodePath("../Animations")

[node name="LayersComponent" type="Node" parent="Hammer" node_paths=PackedStringArray("hitbox", "path_movement")]
script = ExtResource("14_i4848")
hitbox = NodePath("../Hitbox")
path_movement = NodePath("../PathMovementComponent")

[node name="PathMovementComponent" type="Node" parent="Hammer" node_paths=PackedStringArray("spawn_point", "despawn_point", "path_follow", "speed")]
script = ExtResource("15_kfj01")
spawn_point = NodePath("../SpawnPoint")
despawn_point = NodePath("../DespawnPoint")
path_follow = NodePath("../..")
speed = NodePath("../SpeedComponent")

[node name="PropertiesComponent" type="Node" parent="Hammer"]
script = ExtResource("16_gwak5")

[node name="SoundComponent" type="Node" parent="Hammer"]
script = ExtResource("19_jspvw")

[node name="SpeedComponent" type="Node" parent="Hammer"]
script = ExtResource("16_o2ywc")
